--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "homepage": ".",
+  "type": "module",
   "scripts": {
-    "predev": "nvm use",
     "dev:electron": "electron ./src/index.js",
     "dev:front": "vite",
     "dev": "concurrently \"npm run dev:front \" \"npm run dev:electron\" "
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "antd": "^5.21.4",
     "dotenv": "^16.4.5",
     "electron": "^32.2.0",
