--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": ".",
   "type": "module",
   "scripts": {
+    "prepare": "husky",
     "dev:electron": "electron ./src/index.js",
     "dev:front": "vite",
     "dev": "concurrently \"npm run dev:front \" \"npm run dev:electron\" "
@@ -24,8 +25,11 @@
     "vite": "^5.4.9"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@vitejs/plugin-react": "^4.3.2",
     "concurrently": "^9.0.1",
-    "electron-rebuild": "^3.2.9"
+    "electron-rebuild": "^3.2.9",
+    "husky": "^9.1.6"
   }
 }
