--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "cbot",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "dist-electron/index.js",
   "type": "module",
   "scripts": {
     "prepare": "husky",
-    "dev": "vite"
+    "dev": "cross-env cross-env NODE_ENV=development && vite",
+    "build": "cross-env NODE_ENV=production && vite build && electron-builder"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,6 @@
     "@ant-design/icons": "^5.5.1",
     "antd": "^5.21.4",
     "dotenv": "^16.4.5",
-    "electron": "^32.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "robotjs": "^0.6.0",
@@ -25,6 +25,9 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "cross-env": "^7.0.3",
+    "electron": "^32.2.0",
+    "electron-builder": "^25.1.8",
     "electron-rebuild": "^3.2.9",
     "husky": "^9.1.6",
     "vite": "^5.4.9",
